fix gap plan

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -68,7 +68,7 @@ li{
 }
 
 .max_width{
-  max-width: 2000px;
+  /* max-width: 2000px; */
   margin: auto;
   /* Però allargando comunque resta il bgcolor... */
 }
@@ -91,7 +91,6 @@ li{
 }
 .col-4{
   width: calc((100%/12)*4);
-  gap: 1rem;
 }
 .col-8{
   width: calc((100%/12)*8);
